# itmo-university-c

./: README.md
c-cpp-course/ffmpeg-fftw-processing/include/: decode.h  xcorr.h
c-cpp-course/ffmpeg-fftw-processing/src/: decode.c  main.c  xcorr.c
c-cpp-course/ieee-floating-point-arithm/: main.c
c-cpp-course/qt-minesweeper/: touhou_minesweeper.pro
c-cpp-course/qt-minesweeper/include/: dialogsetter.h  mainwindow.h  minesweepercell.h  squarebutton.h  textalignableqlabel.h
c-cpp-course/qt-minesweeper/resources/: resources.qrc
c-cpp-course/qt-minesweeper/src/: dialogsetter.cpp  main.cpp  mainwindow.cpp  minesweepercell.cpp  squarebutton.cpp  textalignableqlabel.cpp
os-course/: README.md
os-course/process-control/: CMakePresets.json
os-course/process-control/object_log_files/: 5_handler  5_producer  6_handler  6_producer
os-course/process-control/src/: 2_repeat_datetime.c  3_total_repeat_datetime.c  5_producer.c  6_launcher.c  6_producer.c
os-course/process-monitor/: CMakeLists.txt
os-course/process-monitor/src/: 5_avg_run_child_or_parent.c
process-control/: CMakeLists.txt
process-control/include/: return_codes.h  utils.c  utils.h
process-control/object_log_files/: 1_datetime
process-control/src/: 1_datetime.c  4_limitations.c  5_handler.c  5_launcher.c  6_handler.c
process-monitor/: CMakePresets.json  desktop.ini
process-monitor/include/: return_codes.h  utils.h
process-monitor/src/: 1_users_processes.c  2_from_sbin.c  3_pid_of_last.c  4_cpu_burst.c  6_the_fattest_one.c  7_io.c  utils.c
